# qvts

./: .dockerignore  .editorconfig  .eslintrc  .gitignore  .gitmessage  .pre-commit-config.yaml  .prettierignore  .prettierrc  README.md  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  load_fixtures.sh  manage.py  package.json  pyproject.toml  schema.yml
.devcontainer/: bash_aliases  devcontainer.json
.envs/.local/: .django  .postgres
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: feature-requests.yml
.github/ISSUE_TEMPLATE/: bug_report_form.yml
.github/workflows/: ci.yml
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
qvts/: conftest.py
qvts/contrib/sites/: __init__.py
qvts/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  __init__.py
qvts/core/: admin.py  apps.py  models.py  urls.py  views.py
qvts/core/utilities/: utils.py
qvts/core/validators/: password_validators.py
qvts/fixtures/: contact_person.json  email_address.json  harbour.json  location.json  operating_company.json  operator.json  ship.json  ship_movement.json  user.json  vts_centre.json
qvts/harbours/: admin.py  apps.py  managers.py  models.py
qvts/harbours/api/: serializers.py  views.py
qvts/harbours/migrations/: 0001_initial.py  0002_harbour_vts_centre.py  0003_alter_harbour_location.py
qvts/harbours/tests/: factories.py  test_drf_urls.py  test_drf_views.py
qvts/ships/: admin.py  apps.py  managers.py  models.py
qvts/ships/api/: serializers.py  services.py  views.py
qvts/ships/migrations/: 0001_initial.py  0002_alter_ship_operating_company.py  0003_alter_operatingcompany_contact_person.py
qvts/ships/tests/: factories.py  test_drf_urls.py  test_drf_views.py
qvts/templates/: 403.html  404.html  500.html  base.html  base_bare.html
qvts/templates/pages/: index.html
qvts/templates/rest_framework/: base.html
qvts/templates/users/: user_detail.html
qvts/users/: adapters.py  admin.py  apps.py  models.py  views.py
qvts/users/api/: serializers.py  views.py
qvts/users/migrations/: 0001_initial.py  0002_remove_user_name_user_created_at_user_first_name_and_more.py  0003_remove_user_role.py
qvts/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_urls.py  test_views.py
qvts/vts/: admin.py  apps.py  models.py
qvts/vts/migrations/: 0001_initial.py  0002_alter_vtscentre_options_alter_vtscentre_email_and_more.py
qvts/vts/tests/: factories.py
requirements/: base.txt  local.txt  production.txt
resources/: db.dbml  tasks.md
webpack/: common.config.js  dev.config.js
